<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_py_amr</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="shree@todo.todo">shree</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <!-- Test dependencies removed: tests have been deleted -->

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
